# PCL_learning

IO/write_pcd/: CMakeLists.txt  pcd_write  pcd_write.cpp
Local_Environment_perception/: CMakeLists.txt
Local_Environment_perception/data/: downsampled.pcd
Local_Environment_perception/py/: data.txt  exp1.py  section.py  sinusoidal surface simulation.ipynb  socket_test_server.py
Local_Environment_perception/src/: point_select.cpp
feature/: CMakeLists.txt  MoI.cpp  filter.cpp  normal.cpp  pca.ipynb  pfh.cpp  readme.md
filter/: CMakeLists.txt  boxes_downsampled.pcd  downsampling.cpp  filter.cpp  filtered.pcd
keypoint/: CMakeLists.txt  RI-Demo.cpp  downsampled.pcd  narf.cpp  rangeImage.cpp  rangeImageDemo.cpp  voxel_grid
read_pcd/: CMakeLists.txt  pcd_reader  read_pcd  read_pcd.cpp
recognition/: CMakeLists.txt  correspondenceGroup.cpp  correspondence_grouping_Demo.cpp  readme.md
recognition/include/: addBoundingBox.cpp  addBoundingBox.h
recognition/testData/: cylinder.pcd
registration/: CMakeLists.txt  icp.cpp  incrementalICP.cpp  main.cpp  readme.md
sample_consensus/: CMakeLists.txt  ransac.cpp  readme.md  sphere_recognition.cpp
segmentation/: CMakeLists.txt  EuclideanCluster.cpp  multi_plane_seg.cpp  readme.md  segmentation_plane.cpp
stl2pcd/: CMakeLists.txt  cylinder.stl  monitor holder.stl  readme.md  stl2pcd.cpp
template/: CMakeLists.txt  readme.md
transform/: CMakeLists.txt  transform.cpp
visualization/: CMakeLists.txt  addBoundingBox.cpp  addBoundingBox.h  boundingBox.cpp  crop.cpp  deCenter.cpp  visualizer.cpp
visualization/pcd/: cropz-y.pcd  cropz.pcd  sin-surface.pcd  surfaceHQ.pcd
visualization/pcl-lib/: arithmetic.cpp  arithmetic.h  visualization.cpp  visualization.h
visualization/src/: PCLVisualizer.cpp  bb_test.cpp  crop.cpp
